--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "tinkoff-solution",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite && node ./server/index.js"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
+    "antd": "^5.4.4",
+    "fastify": "^4.15.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "natural": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^1.2.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
